--- a/client/src/components/card/card.style.css
+++ b/client/src/components/card/card.style.css
@@ -1,25 +1,101 @@
-.Card-containter {
-    display: flex;
-    flex-direction: column;
-    background-color: aquamarine;
-    border: 3px solid;
-    border-radius: 5px;
-    padding: 25px;
-    cursor: pointer;
-    -moz-asx-font-smoothing: grayscale;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
-}
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap");
 
-.Card-containter:hover{
-    transform: scale(1.05);
-}
+.card {
+    width: 290px;
+    height: 354px;
+    border-radius: 20px;
+    background: #212121; 
+    position: relative;
+    border: 2px solid #680747; 
+    transition: 0.5s ease-out;
+    overflow: visible;
+   }
 
-img {
+   .card-details {
+    color: #ffcee4;
+    height: 50%;/* Ajusta el padding para que haya espacio para la imagen */
+    gap: .5em;
+    display: grid;
+    place-content: center;
+    }
+   
+   .text-body {
+    color: #ffcee4;
+    font-family: 'Nunito Sans', sans-serif;
+   }
+   
+   /*Text*/
+   .text-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+   }
+   
+   /*Hover*/
+   .card:hover {
+    border-color: #c3195d; 
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+   }
+   
+   .card:hover .card-button {
+    transform: translate(-50%, 50%);
+    opacity: 1;
+    font-family: 'Nunito Sans', sans-serif;
+   }
+
+   .card-image {
+    max-height: 160px;
     width: 100%;
-    height: 200px; /* Puedes ajustar la altura como desees */
-    object-fit: cover; /* Ajusta la imagen al cuadrado sin distorsión */
-    border-radius: 5px; /* Agrega un borde redondeado */
-    margin-bottom: 10px; /* Añade un margen inferior para separar la imagen del texto */
-  }
+    position: absolute;
+    bottom: 0;
+    height: auto;
+    border-radius: 0px 0px 20px 20px;
+    }
+      
+   .card-button {
+    transform: translate(-50%, 125%);
+    width: 60%;
+    border-radius: 1rem;
+    border: none;
+    background-color: #c3195d; 
+    color: #fff;
+    font-size: 1rem;
+    padding: .5rem 1rem;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    opacity: 0;
+    transition: 0.3s ease-out;
+    overflow: hidden;
+    font-family: 'Nunito Sans', sans-serif;
+    cursor: pointer;
+    }
+
+   .card-button::before,
+   .card-button::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 0;
+    height: 100%;
+    transform: skew(15deg);
+    transition: all 0.5s;
+    z-index: -1;
+    }
+    .card-button::before {
+    left: -10px;
+    background: #33030d; 
+    }
+
+    .card-button::after {
+    right: -10px;
+    background: #680747; 
+    }
+
+    .card-button:hover::before,
+    .card-button:hover::after {
+    width: 58%;
+    }
+
+    
+    
