--- a/client/src/components/cards/cards.style.css
+++ b/client/src/components/cards/cards.style.css
@@ -4,4 +4,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+    display: flex;    
+    flex-wrap: wrap; /* Esta propiedad permite que las cards se coloquen en varias filas */
+    justify-content: space-between;
+
 }
