--- a/client/src/views/home/home.style.css
+++ b/client/src/views/home/home.style.css
@@ -12,7 +12,7 @@ body {
     text-align: center;
 }
 
-.Home-title {
+.HomeTitle {
     margin-top: 75px;
     margin-bottom: 50px;
     font-size: 76px;
