--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,99 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+button {
+    position: relative;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    color: #c3195d; 
+    background: transparent;
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #c3195d; 
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #c3195d; 
+}
+  
+button:hover {
+    color: white;
+    box-shadow: inset 0 -100px 0 0 #c3195d; 
+}
+
+input {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    color: #c3195d; 
+    background: #ffffff; 
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #c3195d; 
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #c3195d;
+}
+
+input:hover {
+    color: #ffffff; 
+    box-shadow: inset 0 -100px 0 0 #c3195d; 
+}
+
+option{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    color: #c3195d; 
+    background: #ffffff; 
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #c3195d; 
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #c3195d;
+}
+
+option:hover {
+    color: #ffffff; 
+    box-shadow: inset 0 -100px 0 0 #c3195d; 
+}
+
+select{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    color: #c3195d; 
+    background: #ffffff; 
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #c3195d; 
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #c3195d;
+}
+
+select:hover {
+    color: #ffffff; 
+    box-shadow: inset 0 -100px 0 0 #c3195d; 
+}
+
+body {
+    font-family: 'Nunito Sans'; 
+}
