--- a/client/src/components/paginacion/paginacion.style.css
+++ b/client/src/components/paginacion/paginacion.style.css
@@ -6,29 +6,23 @@
     margin-top: 20px;
   }
 
-  button {
-    position: relative;
-    display: inline-block;
-    margin: 15px;
-    padding: 15px 30px;
-    text-align: center;
-    font-size: 18px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    color: #c3195d; 
-    background: transparent;
-    cursor: pointer;
-    transition: ease-out 0.5s;
-    border: 2px solid #c3195d; 
-    border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #c3195d; 
-  }
-  
-  button:hover {
-    color: white;
-    box-shadow: inset 0 -100px 0 0 #c3195d; 
-  }
-  
-  button:active {
-    transform: scale(0.9);
-  }
+.text{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 15px;
+  letter-spacing: 1px;
+  color: #c3195d; 
+  background: #ffffff; 
+  transition: ease-out 0.5s;
+  border: 2px solid #c3195d; 
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 0 #c3195d;
+}
+
+.text:hover {
+  color: #ffffff; 
+  box-shadow: inset 0 -100px 0 0 #c3195d; 
+}
