--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,28 +28,6 @@ button:hover {
     box-shadow: inset 0 -100px 0 0 #c3195d; 
 }
 
-input {
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 15px;
-    letter-spacing: 1px;
-    color: #c3195d; 
-    background: #ffffff; 
-    cursor: pointer;
-    transition: ease-out 0.5s;
-    border: 2px solid #c3195d; 
-    border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #c3195d;
-}
-
-input:hover {
-    color: #ffffff; 
-    box-shadow: inset 0 -100px 0 0 #c3195d; 
-}
-
 option{
     position: relative;
     display: inline-block;
@@ -59,7 +37,7 @@ option{
     font-size: 15px;
     letter-spacing: 1px;
     color: #c3195d; 
-    background: #ffffff; 
+    background: transparent; 
     cursor: pointer;
     transition: ease-out 0.5s;
     border: 2px solid #c3195d; 
@@ -68,7 +46,7 @@ option{
 }
 
 option:hover {
-    color: #ffffff; 
+    color: white;
     box-shadow: inset 0 -100px 0 0 #c3195d; 
 }
 
@@ -81,7 +59,7 @@ select{
     font-size: 15px;
     letter-spacing: 1px;
     color: #c3195d; 
-    background: #ffffff; 
+    background: transparent; 
     cursor: pointer;
     transition: ease-out 0.5s;
     border: 2px solid #c3195d; 
@@ -90,7 +68,7 @@ select{
 }
 
 select:hover {
-    color: #ffffff; 
+    color: white;
     box-shadow: inset 0 -100px 0 0 #c3195d; 
 }
 
