--- a/client/src/components/navbar/navbar.style.css
+++ b/client/src/components/navbar/navbar.style.css
@@ -1,6 +1,29 @@
-.Navbar {
+.navbar {
     border: none;
     padding: 10px;
     line-height: 30px;
     margin-bottom: 30px;
+}
+
+
+.navbar-input {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    color: #c3195d; 
+    background: #ffffff; 
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #c3195d; 
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #c3195d;
+}
+
+.navbar-input:hover {
+    color: #ffffff; 
+    box-shadow: inset 0 -100px 0 0 #c3195d; 
 }
