--- a/client/src/components/paginacion/paginacion.style.css
+++ b/client/src/components/paginacion/paginacion.style.css
@@ -6,7 +6,7 @@
     margin-top: 20px;
   }
 
-.text{
+.paginacion-text{
   position: relative;
   display: inline-block;
   text-align: center;
@@ -14,15 +14,20 @@
   padding: 10px 20px;
   font-size: 15px;
   letter-spacing: 1px;
-  color: #c3195d; 
-  background: #ffffff; 
+  color: #ffffff; 
+  background: rgba(0, 0, 0, 0.7); 
   transition: ease-out 0.5s;
   border: 2px solid #c3195d; 
   border-radius: 10px;
   box-shadow: inset 0 0 0 0 #c3195d;
 }
 
-.text:hover {
+.paginacion-text:hover {
   color: #ffffff; 
   box-shadow: inset 0 -100px 0 0 #c3195d; 
+}
+
+.paginacion-button{
+  color: #ffffff; 
+  background: rgba(0, 0, 0, 0.7);
 }
