--- a/client/src/views/landing/landing.style.css
+++ b/client/src/views/landing/landing.style.css
@@ -4,6 +4,8 @@
     background-image: url(https://www.xtrafondos.com/wallpapers/stray-videojuego-11037.jpg);
     background-size: cover;
     background-position: center;
+    width: 100%;
+    height: 100vh;
 }
 .landing-button-Link {
     position: absolute;
